feat: implement admin da loja e validação/formatação de WhatsApp
- Adiciona campo store_admin ao modelo Seller
- Implementa checkbox para admin da loja no frontend
- Campos email/senha condicionais baseados no checkbox
- Validação rigorosa de WhatsApp (10-15 dígitos)
- Formatação automática de WhatsApp no frontend
- Seleção de país com códigos (+55, +1, etc.)
- Remove filtro de email dos logs do Rails
- Atualiza testes para incluir autenticação JWT
- Corrige validações e formatações no backend

--- a/test/fixtures/sellers.yml
+++ b/test/fixtures/sellers.yml
@@ -2,10 +2,14 @@
 
 one:
   user: one
-  whatsapp: MyString
-  email: MyString
+  store: one
+  name: Vendedor Teste 1
+  whatsapp: 11987654321
+  email: vendedor1@teste.com
 
 two:
   user: two
-  whatsapp: MyString
-  email: MyString
+  store: two
+  name: Vendedor Teste 2
+  whatsapp: 11987654322
+  email: vendedor2@teste.com
