feat: configuração para deploy no Heroku
- Adiciona Procfile para o Heroku
- Atualiza configuração do banco de dados para usar DATABASE_URL
- Cria script de deploy automatizado
- Configura Puma para produção

--- a/config/database.yml
+++ b/config/database.yml
@@ -79,20 +79,5 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: sail_store_backend_production
-    username: sail_store_backend
-    password: <%= ENV["SAIL_STORE_BACKEND_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: sail_store_backend_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: sail_store_backend_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: sail_store_backend_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
