feat: Backend com suporte ao Excel Loader e sistema de vendedores
- Adicionado campo external_id para vendedores
- Implementado endpoint para buscar vendedores por external_id
- Removido sistema de vendas antigo (sales) e migrado para orders
- Adicionado cascade delete para foreign keys
- Criado sistema de tokens de API
- Adicionado tarefas rake para limpeza e geração de tokens
- Melhorias no modelo de vendedores e lojas
- Documentação atualizada com guias de API tokens
- Scripts de exemplo para integração com Excel

--- a/test/fixtures/schedules.yml
+++ b/test/fixtures/schedules.yml
@@ -4,14 +4,10 @@ one:
   seller: one
   shift: one
   store: one
-  day_of_week: 1
-  week_number: 1
-  year: 1
+  date: 2025-01-01
 
 two:
   seller: two
   shift: two
   store: two
-  day_of_week: 1
-  week_number: 1
-  year: 1
+  date: 2025-01-02
