feat: Adiciona store_id como campo obrigatório em Order e ajusta validação de external_id por loja
- Adicionada migração para incluir store_id em orders como campo obrigatório
- Populados dados existentes baseado no seller.store_id
- Criado índice único para external_id por loja (store_id)
- Atualizado modelo Order com associação belongs_to :store
- Validação de external_id agora é única por loja em vez de por vendedor
- Ajustado OrdersController para aceitar store_id nos parâmetros
- Corrigido OrderBulkService para incluir store_id ao criar orders
- Atualizados todos os testes para incluir store_id ao criar orders
- Criados testes unitários para verificar validação por loja
- Todos os 141 testes passando

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -3,10 +3,12 @@
 one:
   external_id: MyString
   seller: one
+  store: one
 
 two:
   external_id: MyString
   seller: two
+  store: two
 
 # Pedidos para teste de vendas das vendedoras beta
 # elaine_order:
